--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap');
     </style>
     <title>Kodiak & Whiskers</title>
 </head>
 <body>
     <h1>Kodiak & Whiskers</h1>
+    <div class="nav-bar">
+        <a href="https://kodiakwhiskers.com">Home</a>
+        <a href="https://kodiakwhiskers.com">Gallery</a>
+        <a href="https://kodiakwhiskers.com">Store</a>
+        <a href="https://kodiakwhiskers.com">About</a>
+        <a href="https://kodiakwhiskers.com">Contact</a>
+    </div>
     <p>This is a simple HTML document structure.</p>
 </body>
 </html>
