--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
     <title>Kodiak & Whiskers</title>
 </head>
 <body>
-    <h1>Kodiak & Whiskers</h1>
-    <div class="nav-bar">
-        <a href="https://kodiakwhiskers.com">Home</a>
-        <a href="https://kodiakwhiskers.com">Gallery</a>
-        <a href="https://kodiakwhiskers.com">Store</a>
-        <a href="https://kodiakwhiskers.com">About</a>
-        <a href="https://kodiakwhiskers.com">Contact</a>
+    <div class="header">
+        <div class="top-bar"></div>
+        <a class="logo" href="index.html">
+            <img class="logo-full" src="assets/Kodiak&Whiskers_Full.svg" alt="Kodiak & Whiskers Full Logo">
+            <img class="logo-icon" src="assets/K&W_Full.svg" alt="Kodiak & Whiskers Icon Logo">
+        </a>
+            
+            <div class="nav-bar">
+                <a href="index.html">Home</a>
+                <a href="gallery.html">Gallery</a>
+                <a href="store.html">Store</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+            </div>
+        </div>
     </div>
     <p>This is a simple HTML document structure.</p>
 </body>
