--- a/index.html
+++ b/index.html
@@ -4,20 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/svg+xml" href="assets/Kodiak&Whiskers_Stamp.svg">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap');
     </style>
     <title>Kodiak & Whiskers</title>
 </head>
 <body>
-    <h1>Kodiak & Whiskers</h1>
-    <div class="nav-bar">
-        <a href="https://kodiakwhiskers.com">Home</a>
-        <a href="https://kodiakwhiskers.com">Gallery</a>
-        <a href="https://kodiakwhiskers.com">Store</a>
-        <a href="https://kodiakwhiskers.com">About</a>
-        <a href="https://kodiakwhiskers.com">Contact</a>
+    <div class="header">
+        <a class="logo" href="https://www.instagram.com/kodiakwhiskers/?hl=en" target="_blank">
+            <img class="logo-icon" src="assets/K&W_Full.svg" alt="Kodiak & Whiskers Icon Logo">
+        </a>
+
+        <button class="hamburger-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
     </div>
-    <p>This is a simple HTML document structure.</p>
+
+    <div class="menu-container">
+        <div class="nav-bar">
+            <a href="index.html">Home</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="store.html">Store</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </div>
+        <div class="particle"></div><div class="particle"></div><div class="particle"></div>
+        <div class="particle"></div><div class="particle"></div><div class="particle"></div>
+        <div class="particle"></div><div class="particle"></div><div class="particle"></div>
+        <div class="particle"></div><div class="particle"></div><div class="particle"></div>
+        <div class="particle"></div><div class="particle"></div><div class="particle"></div>
+        <div class="border"></div><div class="border"></div>
+    </div>
+
+
+    <div class="main">
+        <div class="logo-and-titles-wrapper">
+            <a href="about.html" class="logo-link">
+                <img class="logo-full" src="assets/Kodiak&Whiskers_Full.svg" alt="Kodiak & Whiskers Full Logo">
+            </a>
+            <h1 class="title-left">Pottery</h1>
+            <h1 class="title-right">Gallery</h1>
+        </div>
+        <video class="background-video" autoplay muted loop>
+            <source src="assets/Clay Background Loop.mp4" type="video/mp4">
+        </video>
+    </div>
+
+    <p class="scroll-down-text">We craft pottery pieces. To ensure we make the most quality products, we require at least 3 months of advanced orders. With years of experience, our style has evovled.</p>
+
+    <svg>
+        <defs>
+            <filter id="goo">
+                <feGaussianBlur in="SourceGraphic" stdDeviation="10"/>
+                <feColorMatrix in="name" mode="matrix" values="
+                    1 0 0 0 0
+                    0 1 0 0 0
+                    0 0 1 0 0
+                    0 0 0 30 -15" />
+                <feBlend in="SourceGraphic" />
+            </filter>
+        </defs>
+    </svg>
+
+    <script src="script.js"></script>
 </body>
 </html>
