--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </video>
     </div>
 
-    <p class="scroll-down-text">We craft pottery pieces. To ensure we make the most quality products, we require at least 3 months of advanced orders. With years of experience, our style has evovled.</p>
+    <p class="scroll-down-text">Hi! We craft pottery pieces. To ensure we make the most quality products, we require at least 3 months of advanced orders. With years of experience, our style has evovled.</p>
 
     <svg>
         <defs>
